<resources>
    <string name="app_name">Tracking App</string>

    <string name="Workouts">Workouts</string>
    <string name="Weight">Weight</string>
    <string name="Add">Add</string>
    <string name="NewWorkout">New Workout</string>
    <string name="Reps">Reps</string>
    <string name="AddExercise">Add Exercise</string>
    <string name="Title">Title</string>
    <string name="Delete">Delete</string>
    <string name="Edit">Edit</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="kg">kg</string>
    <string name="Date">Date</string>

    <string name="NewWorkoutEmptyEditTextPrompt">Please enter the workout title.</string>
    <string name="AddExerciseEmptyEditTextPrompt">Please enter the exercise title.</string>
    <string name="WorkoutOptions">Workout Options</string>
    <string name="WorkoutUpdated">Workout Updated</string>
    <string name="WorkoutTitleCannotBeEmpty">Workout Title cannot be empty!</string>
    <string name="WorkoutTitle">Workout Title</string>
    <string name="ExerciseOptions">Exercise Options</string>
    <string name="ExerciseName">Exercise Name</string>
    <string name="NewExercise">New Exercise</string>
    <string name="SetNumber">Set Number</string>
    <string name="RemoveSet">Remove Set</string>
    <string name="AddSet">Add Set</string>
    <string name="ExerciseUpdated">Exercise Updated!</string>
    <string name="Bodyfat">Body fat</string>
    <string name="BodyFatPercentage">% Body Fat</string>
    <string name="AddWeightMeasurement">Add Weight Measurement</string>
    <string name="Ratio">Ratio</string>

    <string name="kgPlaceholder">%1$.2f kg</string>
    <string name="percentSignPlaceholder">%1$.2f %%</string>
    <string name="SaveSet">Save Set</string>
    <string name="SaveSets">Save Sets</string>
    <string name="ExerciseTitle">Exercise Title</string>
    <string name="Data">Data</string>
    <string name="Back">Back</string>
    <string name="AddDropset">Add Dropset</string>
    <string name="AddNote">Add Note</string>
    <string name="ConfirmDeleteSetTitle">Delete Set?</string>
    <string name="ConfirmDeleteSetText">Do you really want to delete this Set?</string>
    <string name="ConfirmDeleteWorkoutTitle">Delete Workout?</string>
    <string name="ConfirmDeleteWorkoutText">This will NOT delete exercises used in this workout?</string>
    <string name="ConfirmDeleteExerciseTitle">Delete Exercise?</string>
    <string name="EditName">Edit Name</string>
    <string name="ShowData">Show Data</string>
    <string name="EditSet">Edit Set</string>
    <string name="EditNote">Edit Note</string>
    <string name="ExerciseNoteUpdated">Exercise Note Updated</string>
    <string name="DataTitle">Data Title</string>
    <string name="SortData">SortData</string>
    <string name="ID">ID</string>
    <string name="Name">Name</string>
    <string name="SortDataAscending">Sort Data Ascending</string>
    <string name="DeleteAssociatedSets">Delete associated sets</string>
</resources>