<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="activities.WorkoutsActivity">

    <LinearLayout
        android:id="@+id/layoutTitleOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnExercisesBack"
            android:layout_width="36sp"
            android:layout_height="36sp"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:contentDescription="@string/Back"
            android:src="@drawable/arrow_back_48px"
            android:layout_marginEnd="10dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tvWorkoutTitle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/WorkoutTitle"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnExercisesOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:contentDescription="@string/WorkoutOptions"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/dots_vertical" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExercises"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutTitleOptions" />

    <EditText
        android:id="@+id/etAddExercise"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/NewExercise"
        android:inputType="text"
        android:singleLine="true"
        android:imeOptions="actionDone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnAddExercise"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAddExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>