<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageDropSetIndicator"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        android:contentDescription="@string/RemoveSet"
        android:scaleType="centerCrop"
        android:src="@drawable/subdirectory_arrow_right_48px"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvExerciseSetNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="#"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvExerciseSetWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/Weight"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvExerciseSetReps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:text="@string/Reps"
        android:textSize="16sp" />

</LinearLayout>