<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvExercise"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etExerciseWeight"/>

    <EditText
        android:id="@+id/etExerciseWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Weight"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/etExerciseReps"
        app:layout_constraintStart_toEndOf="@+id/tvExercise"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/etExerciseReps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Reps"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etExerciseWeight"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>