<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="activities.ExercisesDataActivity">

    <LinearLayout
        android:id="@+id/layoutTitleOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnSelectedDataBack"
            android:layout_width="36sp"
            android:layout_height="36sp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:background="#00FFFFFF"
            android:contentDescription="@string/Back"
            android:src="@drawable/arrow_back_48px"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/tvSelectedDataTitle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/DataTitle"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/btnSortData"
            android:layout_width="36sp"
            android:layout_height="36sp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:background="#00FFFFFF"
            android:contentDescription="@string/SortData"
            android:src="@drawable/sort_48px" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSelectedData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutTitleOptions" />

</androidx.constraintlayout.widget.ConstraintLayout>